--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-    <link rel="stylesheet" href="css/project-common-css.css">
+    <link rel="stylesheet" href="project-common-css.css">
     <title>Internpe Length Converter</title>
 </head>
 <body>
